frontend/test/should_fail/cast_edge_types_exec.grg
using cast_model;

rule r {
	-e:E->;
	
	modify {
	---
		def -unrelE:UnrelE->;
		exec ({
			unrelE = (UnrelE)e
		});
	}
}
